Change the footer section and apply screen to them.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
   <div class="c-navbar w-nav">
     <div class="c-ctn cc-nav">
       <a href="index.html" class="brand w-nav-brand w--current">
-        <div class="html-embed-3 w-embed"><svg id="logo-svg" width="102" height="31" viewBox="0 0 102 31" fill="none"
-            xmlns="http://www.w3.org/2000/svg" class=" drawsvg-initialized">
+        <div class="html-embed-3 w-embed">
+
+          <svg id="logo-svg" width="102" height="31" viewBox="0 0 102 31" fill="none" xmlns="http://www.w3.org/2000/svg"
+            class=" drawsvg-initialized">
 
             <path
               d="M19.2782 20.5823C20.264 20.5823 21.0632 19.7882 21.0632 18.8087C21.0632 17.8291 20.264 17.035 19.2782 17.035C18.2923 17.035 17.4932 17.8291 17.4932 18.8087C17.4932 19.7882 18.2923 20.5823 19.2782 20.5823Z"
@@ -65,15 +67,17 @@
               fill="#0C1D36" style="stroke-dasharray: 89.7889, 89.7889; stroke-dashoffset: 89.7889px;"></path>
 
           </svg>
+
         </div>
+
         <img src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf45f80a06c5_Frame.svg"
           alt="logo" class="c-logo__svg cc-hide">
+
         <div class="cc-hide w-embed"></div>
         <div class="html-embed-3 w-embed">
           <svg width="102" height="31" viewbox="0 0 102 31" xmls="http://www.w3.org/2000/svg"
             class="drawsvg-initialized"></svg>
         </div>
-      </a>
       </a>
 
       <!-- NAVIGATION BAR -->
@@ -88,7 +92,9 @@
           <nav class="flex-menu solution w-dropdown-list"
             style="display: none; opacity: 0; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
             id="open-why" aria-labelledby="w-dropdown-toggle-0">
-            <div class="c-nav-drop__left-item cc-12" style="background-color: orange;"><img loading="lazy"
+            <div class="c-nav-drop__left-item cc-12" style="background-color: orange;">
+
+              <img loading="lazy"
                 src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf0ef70a06be_Group%20252%20copy.svg"
                 alt="" class="c-nav-drop__design cc-hide">
               <div class="c-why-nav__bubble cc-1"
@@ -152,10 +158,6 @@
             }
           }
 
-          // function whyOpen() {
-          //   document.getElementById("open-why").classList.toggle("show");
-          //   console.log("you clicked here..");
-          // }
 
         </script>
 
@@ -1678,8 +1680,6 @@
 
     <!-- CUSTOMERS THINK SECTION -->
 
-
-
     <section class="c-section no-overflow p-btm__140 wf-section">
       <div class="c-beige__bg">
         <div class="c-gradient__bg  ">
@@ -1894,7 +1894,6 @@
 
     <!-- Stryve State -->
 
-
     <section class="c-section p-top__140 cc-stats wf-section">
       <div class="c-ctn cc-60 cc-flex">
         <div class="c-content_wrapper cc-100">
@@ -2008,7 +2007,7 @@
                 <div class="relative _2">Join them today</div>
               </div>
             </a>
-            <a href="bookdemo.html" target="_blank" class="c-btn cc-with-icon w-inline-block" rel="noopener noreferrer"
+            <a href="bookdemo.html" class="c-btn cc-with-icon w-inline-block" rel="noopener noreferrer"
               data-aos="fade-up">
               <div>Book a demo to learn more</div>
               <img src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf9bfb0a0658_arrow.svg"
@@ -2178,7 +2177,7 @@
             </h1>
           </div>
           <div class="c-tag__holder cc-pre-footer faded-btn">
-            <a href="bookdemo.html" target="_blank" class="c-btn cc-with-icon cc-white ppc-book-4 w-inline-block">
+            <a href="bookdemo.html" class="c-btn cc-with-icon cc-white ppc-book-4 w-inline-block">
               <div class="text-block-15">Book your demo with us here</div>
               <img
                 src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf2afe0a07b4_arrow%20right%20copy%202.svg"
@@ -2250,31 +2249,31 @@
               <div class="c-footer__links">
                 <div class="c-footer__links-block">
                   <div class="c-footer__header">Why Stryve</div>
-                  <a href="#" class="c-footer__link-item">Time</a>
-                  <a href="#" class="c-footer__link-item">Compliance</a>
-                  <a href="#" class="c-footer__link-item">Engagement</a>
-                  <a href="#" class="c-footer__link-item">Diversity & inclusion</a>
-                  <a href="#" class="c-footer__link-item">All feature</a>
+                  <a href="save-time.html" class="c-footer__link-item">Time</a>
+                  <a href="remain.html" class="c-footer__link-item">Compliance</a>
+                  <a href="engagement.html" class="c-footer__link-item">Engagement</a>
+                  <a href="improve.html" class="c-footer__link-item">Diversity & inclusion</a>
+                  <a href="index.html" class="c-footer__link-item">All feature</a>
                 </div>
                 <div class="c-footer__links-block cc-build-for">
                   <div class="c-footer__header">Built for</div>
-                  <a href="#" class="c-footer__link-item">Start-ups</a>
-                  <a href="#" class="c-footer__link-item">Growing businesses</a>
-                  <a href="#" class="c-footer__link-item">Established businesses</a>
+                  <a href="Richard-Angle.html" class="c-footer__link-item">Start-ups</a>
+                  <a href="Katharine-Archer.html" class="c-footer__link-item">Growing businesses</a>
+                  <a href="Alex-Rook.html" class="c-footer__link-item">Established businesses</a>
                 </div>
                 <div class="c-footer__links-block">
                   <div class="c-footer__header">Solution</div>
-                  <a href="#" class="c-footer__link-item">Attract talent</a>
-                  <a href="#" class="c-footer__link-item">Assess talent</a>
-                  <a href="#" class="c-footer__link-item">Simplify hiring</a>
+                  <a href="solution-attract.html" class="c-footer__link-item">Attract talent</a>
+                  <a href="assess-talent.html" class="c-footer__link-item">Assess talent</a>
+                  <a href="simplify.html" class="c-footer__link-item">Simplify hiring</a>
                 </div>
                 <div class="c-footer__links-block">
                   <div class="c-footer__header">Company</div>
-                  <a href="#" class="c-footer__link-item">pricing</a>
-                  <a href="#" class="c-footer__link-item">Learning</a>
-                  <a href="#" class="c-footer__link-item">Careers</a>
-                  <a href="#" class="c-footer__link-item">B Crop</a>
-                  <a href="#" class="c-footer__link-item">About</a>
+                  <a href="pricing.html" class="c-footer__link-item">pricing</a>
+                  <a href="resource.html" class="c-footer__link-item">Learning</a>
+                  <a href="career.html" class="c-footer__link-item">Careers</a>
+                  <a href="B-Corp.html" class="c-footer__link-item">B Crop</a>
+                  <a href="about-us.html" class="c-footer__link-item">About</a>
                 </div>
               </div>
             </div>
