--- a/resource.html
+++ b/resource.html
@@ -742,7 +742,6 @@
   <main class="page__wrapper">
 
 
-
     <div data-s1="1" data-scroll-section="1" class="c-hero cc-beige-bg wf-section">
       <div class="c-ctn cc-80">
         <div class="c-hero__solution-cover cc-learnings" data-anim="unscale">
@@ -1259,10 +1258,10 @@
                     class="c-footer__logo-svg">
                 </a>
                 <div class="flex-wrapper cc-socials">
-                  <a href="#" class="c-btn cc-no-border white mg-right__20 faded-btn w-button">
+                  <a href="login.html" class="c-btn cc-no-border white mg-right__20 faded-btn w-button">
                     Log in
                   </a>
-                  <a href="#" class="c-btn cc-light white-border faded-btn w-button">
+                  <a href="bookdemo.html" class="c-btn cc-light white-border faded-btn w-button">
                     Get started
                   </a>
 
@@ -1305,31 +1304,31 @@
               <div class="c-footer__links">
                 <div class="c-footer__links-block">
                   <div class="c-footer__header">Why Stryve</div>
-                  <a href="#" class="c-footer__link-item">Time</a>
-                  <a href="#" class="c-footer__link-item">Compliance</a>
-                  <a href="#" class="c-footer__link-item">Engagement</a>
-                  <a href="#" class="c-footer__link-item">Diversity & inclusion</a>
-                  <a href="#" class="c-footer__link-item">All feature</a>
+                  <a href="save-time.html" class="c-footer__link-item">Time</a>
+                  <a href="remain.html" class="c-footer__link-item">Compliance</a>
+                  <a href="engagement.html" class="c-footer__link-item">Engagement</a>
+                  <a href="improve.html" class="c-footer__link-item">Diversity & inclusion</a>
+                  <a href="index.html" class="c-footer__link-item">All feature</a>
                 </div>
                 <div class="c-footer__links-block cc-build-for">
                   <div class="c-footer__header">Built for</div>
-                  <a href="#" class="c-footer__link-item">Start-ups</a>
-                  <a href="#" class="c-footer__link-item">Growing businesses</a>
-                  <a href="#" class="c-footer__link-item">Established businesses</a>
+                  <a href="Richard-Angle.html" class="c-footer__link-item">Start-ups</a>
+                  <a href="Katharine-Archer.html" class="c-footer__link-item">Growing businesses</a>
+                  <a href="Alex-Rook.html" class="c-footer__link-item">Established businesses</a>
                 </div>
                 <div class="c-footer__links-block">
                   <div class="c-footer__header">Solution</div>
-                  <a href="#" class="c-footer__link-item">Attract talent</a>
-                  <a href="#" class="c-footer__link-item">Assess talent</a>
-                  <a href="#" class="c-footer__link-item">Simplify hiring</a>
+                  <a href="solution-attract.html" class="c-footer__link-item">Attract talent</a>
+                  <a href="assess-talent.html" class="c-footer__link-item">Assess talent</a>
+                  <a href="simplify.html" class="c-footer__link-item">Simplify hiring</a>
                 </div>
                 <div class="c-footer__links-block">
                   <div class="c-footer__header">Company</div>
-                  <a href="#" class="c-footer__link-item">pricing</a>
-                  <a href="#" class="c-footer__link-item">Learning</a>
-                  <a href="#" class="c-footer__link-item">Careers</a>
-                  <a href="#" class="c-footer__link-item">B Crop</a>
-                  <a href="#" class="c-footer__link-item">About</a>
+                  <a href="pricing.html" class="c-footer__link-item">pricing</a>
+                  <a href="resource.html" class="c-footer__link-item">Learning</a>
+                  <a href="career.html" class="c-footer__link-item">Careers</a>
+                  <a href="B-Corp.html" class="c-footer__link-item">B Crop</a>
+                  <a href="about-us.html" class="c-footer__link-item">About</a>
                 </div>
               </div>
             </div>
@@ -1410,6 +1409,8 @@
           </div>
         </div>
       </div>
+
+
 
 
 
