Change the files accroding to need.

--- a/Katharine-Archer.html
+++ b/Katharine-Archer.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/Homepage/main.css" />
   <link rel="stylesheet" href="css/Katharine-Archer/Katharine-Archer.css" />
+  <link rel="stylesheet" href="/src/components/organisms/nav.css" />
+  <!-- <link rel="stylesheet" href="/src/components/atoms/typography.css" /> -->
+  <!-- <link rel="stylesheet" href="/src/components/atoms/button.css" /> -->
   <link rel="stylesheet" href="css/Homepage/responsive.css" />
   <title>Katharine-Archer</title>
 </head>
