--- a/about-us.html
+++ b/about-us.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/about-us/us.css" />
   <link rel="stylesheet" href="css/Homepage/responsive.css" />
   <link rel="stylesheet" href="css/about-us/responsive.css" />
+  <link rel="stylesheet" href="src/components/atoms/button.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>About us</title>
 </head>
