--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="css/Homepage/image-move.css" />
   <link rel="stylesheet" href="css/Attract/main-attract.css" />
   <link rel="stylesheet" href="css/Homepage/ststst.css" />
+  <link rel="stylesheet" href="src/components/atoms/button.css" />
+  <link rel="stylesheet" href="src/components/molecules/hPtag.css" />
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -37,6 +39,7 @@
 
   <div class="c-navbar w-nav">
     <div class="c-ctn cc-nav">
+
       <a href="index.html" class="brand w-nav-brand w--current">
         <div class="html-embed-3 w-embed">
 
@@ -753,6 +756,8 @@
 
 
   <main class="page__wrapper">
+
+
     <div class="c-hero cc-flex wf-section">
 
       <!-- COLOR BALSS AND IMAGES -->
@@ -2354,6 +2359,8 @@
           </div>
         </div>
       </div>
+
+
 
 
 
