--- a/solution-attract.html
+++ b/solution-attract.html
@@ -8,13 +8,9 @@
   <link rel="stylesheet" href="css/Homepage/main.css" />
 
 
-  <link rel="stylesheet" href="css/Attract/start.css" />
-  <link rel="stylesheet" href="css/Attract/experience.css" />
-  <link rel="stylesheet" href="css/Attract/career-site.css" />
-  <link rel="stylesheet" href="css/Attract/engage.css" />
   <link rel="stylesheet" href="css/Attract/main-attract.css" />
-  <link rel="stylesheet" href="css/Attract/animation2.css" />
   <link rel="stylesheet" href="css/Homepage/responsive.css" />
+  <link rel="stylesheet" href="src/components/atoms/button.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
@@ -26,12 +22,13 @@
 
   <!-- NAVIGATION BAR -->
 
-
   <div class="c-navbar w-nav">
     <div class="c-ctn cc-nav">
       <a href="index.html" class="brand w-nav-brand w--current">
-        <div class="html-embed-3 w-embed"><svg id="logo-svg" width="102" height="31" viewBox="0 0 102 31" fill="none"
-            xmlns="http://www.w3.org/2000/svg" class=" drawsvg-initialized">
+        <div class="html-embed-3 w-embed">
+
+          <svg id="logo-svg" width="102" height="31" viewBox="0 0 102 31" fill="none" xmlns="http://www.w3.org/2000/svg"
+            class=" drawsvg-initialized">
 
             <path
               d="M19.2782 20.5823C20.264 20.5823 21.0632 19.7882 21.0632 18.8087C21.0632 17.8291 20.264 17.035 19.2782 17.035C18.2923 17.035 17.4932 17.8291 17.4932 18.8087C17.4932 19.7882 18.2923 20.5823 19.2782 20.5823Z"
@@ -57,15 +54,17 @@
               fill="#0C1D36" style="stroke-dasharray: 89.7889, 89.7889; stroke-dashoffset: 89.7889px;"></path>
 
           </svg>
+
         </div>
+
         <img src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf45f80a06c5_Frame.svg"
           alt="logo" class="c-logo__svg cc-hide">
+
         <div class="cc-hide w-embed"></div>
         <div class="html-embed-3 w-embed">
           <svg width="102" height="31" viewbox="0 0 102 31" xmls="http://www.w3.org/2000/svg"
             class="drawsvg-initialized"></svg>
         </div>
-      </a>
       </a>
 
       <!-- NAVIGATION BAR -->
@@ -80,7 +79,9 @@
           <nav class="flex-menu solution w-dropdown-list"
             style="display: none; opacity: 0; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
             id="open-why" aria-labelledby="w-dropdown-toggle-0">
-            <div class="c-nav-drop__left-item cc-12" style="background-color: orange;"><img loading="lazy"
+            <div class="c-nav-drop__left-item cc-12" style="background-color: orange;">
+
+              <img loading="lazy"
                 src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf0ef70a06be_Group%20252%20copy.svg"
                 alt="" class="c-nav-drop__design cc-hide">
               <div class="c-why-nav__bubble cc-1"
@@ -144,10 +145,6 @@
             }
           }
 
-          // function whyOpen() {
-          //   document.getElementById("open-why").classList.toggle("show");
-          //   console.log("you clicked here..");
-          // }
 
         </script>
 
@@ -610,7 +607,7 @@
             <div class="c-bubble__wrapper _240 nav-menu"
               style="transform: translate3d(0px, 0px, 0px) scale3d(0.3, 0.3, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
             </div>
-            <div class="c-bubble__wrapper _205 nav-menu"
+            <div class="c-bubble__wrapper _205 nav-menu blueballAni"
               style="transform: translate3d(0px, 0px, 0px) scale3d(0.3, 0.3, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
             </div>
           </div>
@@ -738,6 +735,7 @@
 
     </div>
   </div>
+
 
   <!-- MAIN SECTION -->
 
@@ -1079,7 +1077,8 @@
                   </div>
                   <div class="lineswrap">
                     <div class="line animate-text"
-                      style="display: block; text-align: start; width: 100%; transition-delay: 200ms;">candidates</div>
+                      style="display: block; text-align: start; width: 100%; transition-delay: 200ms;">candidates
+                    </div>
                   </div>
                 </h2>
                 <div class="btn-holder cc-30">
@@ -1099,7 +1098,8 @@
                 <div class="c-info__holder cc-ruby"><img
                     src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf1b760a0716_star%20copy.svg"
                     alt="red circle holding a white star icon" class="c-info__icon">
-                  <h5 class="heading-7 cc-ruby">Schedule to your heart's content! With Stryve, there is no limit to the
+                  <h5 class="heading-7 cc-ruby">Schedule to your heart's content! With Stryve, there is no limit to
+                    the
                     number of actions you can set.</h5>
                 </div>
               </div>
@@ -1198,7 +1198,8 @@
                 <div class="c-info__holder cc-green cc-right"><img
                     src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf70d90a072b_star%20copy%202.svg"
                     alt="green circle holding a white star icon" class="c-info__icon">
-                  <h5 class="heading-7 cc-green">Don't see a job board listed here that you'd like us to feature? Let us
+                  <h5 class="heading-7 cc-green">Don't see a job board listed here that you'd like us to feature? Let
+                    us
                     know.</h5>
                 </div>
               </div>
@@ -1235,7 +1236,8 @@
           <div class="c-text__content center-text cc-30 mg-auto">
             <h2 data-split="200" data-split-type="lines">
               <div class="lineswrap">
-                <div class="line animate-text" style="display: block; text-align: center; width: 100%;">Yours for</div>
+                <div class="line animate-text" style="display: block; text-align: center; width: 100%;">Yours for
+                </div>
               </div>
             </h2>
             <h2 class="heading-11">
@@ -1245,7 +1247,8 @@
             </h2>
             <h2 class="heading-12">
               <div class="lineswrap">
-                <div class="line animate-text" style="display: block; text-align: center; width: 100%;">for only £19.99
+                <div class="line animate-text" style="display: block; text-align: center; width: 100%;">for only
+                  £19.99
                 </div>
               </div>
             </h2>
@@ -1486,12 +1489,14 @@
         <div class="c-header cc-60 center center-text">
           <h2>
             <div class="lineswrap" data-aos="fade-up">
-              <div class="line animate-text" style="display: block; text-align: center; width: 100%;">We're here to help
+              <div class="line animate-text" style="display: block; text-align: center; width: 100%;">We're here to
+                help
                 with</div>
             </div>
             <div class="lineswrap" data-aos="fade-up">
               <div class="line animate-text"
-                style="display: block; text-align: center; width: 100%; transition-delay: 200ms;">heaps of insights and
+                style="display: block; text-align: center; width: 100%; transition-delay: 200ms;">heaps of insights
+                and
                 tips</div>
             </div>
           </h2>
