orgnize the code.

--- a/src/pages/homepage/index.html
+++ b/src/pages/homepage/index.html
@@ -34,6 +34,7 @@
 
   <link rel="stylesheet" href="/src/components/atoms/button.css" />
   <link rel="stylesheet" href="/src/components/atoms/Text/text.css" />
+  <link rel="stylesheet" href="/src/components/organisms/section/section.css" />
 
 
   <script
