--- a/src/pages/career/career.html
+++ b/src/pages/career/career.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/Homepage/main.css" />
-  <link rel="stylesheet" href="css/career/career.css" />
-  <link rel="stylesheet" href="css/Homepage/responsive.css" />
-  <link rel="stylesheet" href="css/career/responsive.css" />
+  <link rel="stylesheet" href="/src/css/Homepage/main.css" />
+  <link rel="stylesheet" href="/src/css/career/career.css" />
+  <link rel="stylesheet" href="/src/css/Homepage/responsive.css" />
+  <link rel="stylesheet" href="/src/css/career/responsive.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 
@@ -17,8 +17,8 @@
   <link rel="stylesheet" href="/src/components/global/global.css" />
   <link rel="stylesheet" href="/src/components/organisms/section/section.css" />
   <link rel="stylesheet" href="/src/components/organisms/navbar/nav.css" />
-  <!-- <link rel="stylesheet" href="/src/components/atoms/button.css" /> -->
-  <!-- <link rel="stylesheet" href="/src/components/atoms/Text/text.css" /> -->
+  <link rel="stylesheet" href="/src/components/atoms/button.css" />
+  <link rel="stylesheet" href="/src/components/atoms/Text/text.css" />
 
 
   <title>Career</title>
