--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -5,12 +5,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/Homepage/main.css" />
-  <link rel="stylesheet" href="css/contact/contact.css" />
-  <link rel="stylesheet" href="css/Homepage/responsive.css" />
+  <link rel="stylesheet" href="/src/css/Homepage/main.css" />
+  <link rel="stylesheet" href="/src/css/contact/contact.css" />
+  <link rel="stylesheet" href="/src/css/Homepage/responsive.css" />
   <!-- <link rel="stylesheet" href="css/contact/responsive.css" /> -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>Contact</title>
+
+
+  <!-- NEW CSS FILES -->
+
+  <link rel="stylesheet" href="/src/components/global/global.css" />
+  <link rel="stylesheet" href="/src/components/organisms/section/section.css" />
+  <link rel="stylesheet" href="/src/components/organisms/navbar/nav.css" />
+  <link rel="stylesheet" href="/src/components/atoms/button.css" />
+  <!-- <link rel="stylesheet" href="/src/components/atoms/Text/text.css" /> -->
+
 </head>
 
 <body class="loaded">
