--- a/src/pages/price/pricing.html
+++ b/src/pages/price/pricing.html
@@ -5,11 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/Homepage/main.css" />
-  <link rel="stylesheet" href="css/pricing/pricing.css" />
-  <link rel="stylesheet" href="css/Homepage/responsive.css" />
-  <link rel="stylesheet" href="css/pricing/responsive.css" />
+  <link rel="stylesheet" href="/src/css/Homepage/main.css" />
+  <link rel="stylesheet" href="/src/css/pricing/pricing.css" />
+  <link rel="stylesheet" href="/src/css/Homepage/responsive.css" />
+  <link rel="stylesheet" href="/src/css/pricing/responsive.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+  <!-- NEW CSS FILES -->
+
+  <link rel="stylesheet" href="/src/components/global/global.css" />
+  <link rel="stylesheet" href="/src/components/organisms/section/section.css" />
+  <link rel="stylesheet" href="/src/components/organisms/navbar/nav.css" />
+  <link rel="stylesheet" href="/src/components/atoms/button/button.css" />
+  <link rel="stylesheet" href="/src/components/atoms/Text/text.css" />
+
   <title>Pricing</title>
 </head>
 
