add navigation bar

--- a/src/pages/homepage/index.html
+++ b/src/pages/homepage/index.html
@@ -40,16 +40,7 @@
   <script
     src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf2fe50a07ea_suction%20lottie.json"></script>
 
-  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
-    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 
-  <script>
-
-    $(function () {
-
-      $("#navigationBar").load("navbar.html");
-    });
-  </script>
 
   <title>Stryve</title>
 </head>
@@ -60,7 +51,7 @@
   <!-- NAVIGATION BAR -->
 
 
-  <!-- <div class="c-navbar w-nav" id="navigationBar">
+  <div class="c-navbar w-nav" id="navigationBar">
     <div class="c-ctn cc-nav">
 
       <a href="/src/pages/homepage/index.html" class="brand w-nav-brand w--current">
@@ -796,9 +787,9 @@
       </div>
 
     </div>
-  </div> -->
+  </div>
 
-  <!-- MAIN -->
+  <!--  MAIN -->
 
 
   <main class="page__wrapper">
