Apply atomic files on the website.

--- a/src/pages/attract/solution-attract.html
+++ b/src/pages/attract/solution-attract.html
@@ -18,12 +18,18 @@
   <!-- NEW STYLE -->
   <link rel="stylesheet" href="/src/components/global/global.css" />
 
-  <link rel="stylesheet" href="/src/components/organisms/navbar/nav.css" />
+  <!-- <link rel="stylesheet" href="/src/components/organisms/navbar/nav.css" /> -->
 
   <link rel="stylesheet" href="/src/components/atoms/Text/text.css" />
   <link rel="stylesheet" href="/src/components/organisms/section/section.css" />
   <link rel="stylesheet" href="/src/components/atoms/button/button.css" />
 
+  <!-- SAME COMPONENETS AND SAME CSS -->
+
+  <link rel="stylesheet" href="/src/components/atoms/pricing-line/line.css" />
+  <link rel="stylesheet" href="/src/components/organisms/customer-think/customer-think.css" />
+  <link rel="stylesheet" href="/src/components/molecules/tips/tips.css" />
+  <link rel="stylesheet" href="/src/components/molecules/welcome/welcome.css" />
 
   <title>Attract</title>
 </head>
