--- a/src/pages/homepage/index.html
+++ b/src/pages/homepage/index.html
@@ -8,19 +8,7 @@
 
 
   <link rel="stylesheet" href="/src/css/Homepage/main.css" />
-  <link rel="stylesheet" href="src/components/organisms/nav.css" />
-  <link rel="stylesheet" href="/src/css/Homepage/slider.css" />
-  <link rel="stylesheet" href="/src/css/Homepage/colorBalls.css" />
-  <link rel="stylesheet" href="/src/css/Homepage/welcome.css" />
-  <link rel="stylesheet" href="/src/css/Homepage/footer.css" />
   <link rel="stylesheet" href="/src/css/Homepage/responsive.css" />
-  <link rel="stylesheet" href="/src/css/Homepage/animation.css" />
-  <link rel="stylesheet" href="/src/css/Homepage/key-frame.css" />
-  <link rel="stylesheet" href="/src/css/Homepage/animate.css" />
-  <link rel="stylesheet" href="/src/css/Homepage/image-move.css" />
-  <link rel="stylesheet" href="/src/css/Attract/main-attract.css" />
-  <link rel="stylesheet" href="/src/css/Homepage/ststst.css" />
-  <link rel="stylesheet" href="/src/components/molecules/hPtag.css" />
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -30,17 +18,25 @@
 
   <link rel="stylesheet" href="/src/components/global/global.css" />
 
-  <link rel="stylesheet" href="/src/components/organisms/navbar/nav.css" />
-
   <link rel="stylesheet" href="/src/components/atoms/button/button.css" />
   <link rel="stylesheet" href="/src/components/atoms/Text/text.css" />
   <link rel="stylesheet" href="/src/components/organisms/section/section.css" />
+  <link rel="stylesheet" href="/src/components/molecules/colorballs/balls.css" />
+
+  <link rel="stylesheet" href="/src/components/molecules/stryve-stats/stryve-stats.css" />
+
+
+
+  <link rel="stylesheet" href="/src/components/organisms/slider/slider.css" />
+  <link rel="stylesheet" href="/src/components/atoms/pricing-line/line.css" />
+  <link rel="stylesheet" href="/src/components/organisms/customer-think/customer-think.css" />
+  <link rel="stylesheet" href="/src/components/molecules/tips/tips.css" />
+  <link rel="stylesheet" href="/src/components/molecules/welcome/welcome.css" />
+  <link rel="stylesheet" href="/src/components/organisms/footer/footer.css" />
 
 
   <script
     src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf2fe50a07ea_suction%20lottie.json"></script>
-
-
 
   <title>Stryve</title>
 </head>
@@ -51,7 +47,7 @@
   <!-- NAVIGATION BAR -->
 
 
-  <div class="c-navbar w-nav" id="navigationBar">
+  <div class="c-navbar w-nav">
     <div class="c-ctn cc-nav">
 
       <a href="/src/pages/homepage/index.html" class="brand w-nav-brand w--current">
@@ -97,6 +93,7 @@
         </div>
       </a>
 
+      <!-- NAVIGATION BAR -->
 
       <nav class="nav-menu w-nav-menu" id="myLinks">
         <div class="w-dropdown" style="z-index: 999;">
@@ -789,7 +786,7 @@
     </div>
   </div>
 
-  <!--  MAIN -->
+  <!-- MAIN -->
 
 
   <main class="page__wrapper">
@@ -971,8 +968,8 @@
             <div class="flex-wrapper cc-first-row circle-text">
 
               <a id="first-ball" style="background-color: rgb(255, 255, 255); cursor: pointer;"
-                class="c-solution__circle cc-1 w-inline-block circle-text-one" onclick="myFunction()"
-                data-aos="zoom-in">
+                class="c-solution__circle cc-2 w-inline-block circle-text-one aos-init aos-animate"
+                onclick="myFunction()" data-aos="zoom-in">
                 <div id="first-ball-text" style="color:rgb(15,23,42)" class="text-11 center-text text-color">I'm not
                   super
                   tech-savvy</div>
